<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="top.sanqii.nwunet.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="top.sanqii.nwunet.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_netCertification"
        android:name="top.sanqii.nwunet.ui.netCertification.NetCertificationFragment"
        android:label="@string/menu_netCertification"
        tools:layout="@layout/fragment_netcertification" />

    <fragment
        android:id="@+id/nav_webview"
        android:name="top.sanqii.nwunet.ui.others.WebViewFragment"
        android:label="登陆界面"
        tools:layout="@layout/fragment_webview" />
</navigation>